# CloudyBot-DevOps-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEMO_CODE_FLOW.md  Dockerfile  LICENSE  Makefile  README.md  app.py  bot.py  hf_client.py  logger.py  openai_client.py  project_structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh
.streamlit/: config.toml
cloudybot/: __init__.py
cloudybot/clients/: __init__.py  base.py  hf_client.py  openai_client.py
cloudybot/config/: __init__.py  logging.py  settings.py
cloudybot/core/: __init__.py  bot.py  exceptions.py
tests/: conftest.py  test_bot.py  test_settings.py
